sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:20: error: 'while' expected but '}' found.
} 
^