sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var fini = false;
  var n = getNombreValeurs();
  do {
    for (i<- 0 to n -2){
      if (!plusPetit(i,i+1)){
        echange(i,i+1);
        fini = false
      }
    }
    for (i<- 0 to n -2){
      if (!plusPetit(n - i - 2,n - i - 1)){
        echange(n - i - 2,n - i - 1);
        fini = false
      }
    }
    
  } whiel(!fini)
}